src/tests/Metalama.Patterns.Caching.AspectTests/InvalidateCacheAttributeTests/Diagnostics/WithNotCachedMethodName.t.cs
// Error LAMA5100 on `Invalidate`: `The [InvalidateCache] aspect applied to WithNotCachedMethodName.CachingClass.Invalidate() cannot invalidate WithNotCachedMethodName.CachingClass.DoAction(): this method is not cached by the [Cache] aspect.`